--- a/components/vf-header/vf-header.scss
+++ b/components/vf-header/vf-header.scss
@@ -8,5 +8,6 @@
   grid-column: 1 / -1;
   grid-template-columns: minmax(var(--page-grid-gap), auto) minmax(auto, $global-page-max-width) minmax(var(--page-grid-gap), auto);
   height: 100%;
+  margin-bottom: 1rem;
   max-height: 320px;
 }
